# ManaCore

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: data_pipeline.yml  data_pipeline_clean.yml  download_card_data.yml
data/database/: vintage-cube.duckdb
data/processed/: archetype_game_winrate.csv  archetype_match_winrate.csv  card_game_winrate_per_season.csv  card_mainboard_rate_per_season.csv  card_match_winrate_per_season.csv  combined_winrates_per_season.csv  cube_history.csv  cube_mainboard.csv  decktype_game_winrate.csv  decktype_match_winrate.csv  drafted_decks.csv  elo_development.csv  matches.csv  player_archetype_winrates.csv  player_decktype_winrates.csv  player_game_and_match_winrate.csv  standings.csv
data/processed/history/: Season-1_history.json  (+2 more)
data/raw/: elo_history.csv  elo_history_normalized.csv  player_elo.csv
manacore/: pyproject.toml  setup.py
manacore/cardbase/: get_cardbase.py
manacore/config/: get_seasons.py  seasons.json
manacore/deckcolor/: set_deckcolor.py
manacore/elo/: elo_calculator.py  elo_config.json
manacore/loader/: source_reader.py
manacore/standings/: standings_calculator.py
manacore/statistics/: statistics_calculator.py  statistics_calculator2.py
scripts/: get_card_history.py  get_cards_cube.py  get_deckcolor.py  get_elo.py  get_latest_cube.py  get_stats.py  load_data.py  make_standings.py
services/: download_bulk_carddata.py  run_pipeline.py
tests/: bulktest.py  folders.py  make_db.py  stats_tests2.py  stats_tets.py  test.py  testplayerarchtype  tests_cards.py
