[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manacore"
version = "0.1"
description = "ManaCore data pipeline package"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "duckdb>=1.3.2",
    "requests>=2.32.4"
]
